--- a/index.html
+++ b/index.html
@@ -1,9 +1,160 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Portfolio</title>
-</head>
-  <body>
-    <h1> Tiffany T's Portfolio</h1>
-  </body>
+
+    <!-- LINK TO CSS -->
+    <link rel="stylesheet" href="style.css" />
+
+    <!-- LINK TO FONTS -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+
+    <link href="https://fonts.googleapis.com/css2?family=Playball&family=Mate+SC&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="https://use.fontawesome.com/a205ec7b28.css">
+<!-- START NAV BAR-->
+<body>
+    <header id="header">
+      <nav id="navbar">
+        <ul>
+          <li>
+            <a class= "neonText pulsate" href="#welcome-section">About</a> 
+          </li>
+          <li>
+            <a class= "neonText pulsate" href="#projects">Portfolio</a>
+          </li>
+          <li>
+            <a class= "neonText pulsate" href="#contact">Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <!--END NAV -->
+
+<!-- ABOUT PAGE START -->
+<section id="welcome-section">
+    <h1 class= "page_title"> Tiffany T's Portfolio</h1>
+      <p>Web Developer</p>
+  <!-- PROFILE AND RESUME -->
+        <div class= "profile">
+          <img src="https://scontent-lga3-1.xx.fbcdn.net/v/t1.6435-9/197923673_10222866372865957_1009757365118895372_n.jpg?_nc_cat=103&amp;ccb=1-3&amp;_nc_sid=730e14&amp;_nc_ohc=NU1l8FuATL8AX-xnShM&amp;_nc_ht=scontent-lga3-1.xx&amp;oh=171897becc6f11102eacf72ad99d9a2f&amp;oe=60E3298E
+          " alt="picture">
+          <div class= "resume">
+            <h3>Resume</h3>
+            <ul>
+              <div class= "job1">Operations Analyst</div>
+                <p class="job_details">2013- 2021 New York, NY</p>
+              <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
+              <br>
+              <li>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
+              <br>
+              <li>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</li>
+              <br>
+              <li>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</li>
+          </div>
+        </div>
+  </section>
+  <!--ABOUT PAGE END -->
+
+  <!--PROJECTS PAGE START -->
+  <section id="projects">
+    <h1 class="page_title">Portfolio</h1>
+      <div class="project-tile">
+        <div class="project_title">Tribute Page    <p class="codepen" data-height="265" data-theme-id="dark" data-default-tab="html,result" data-user="OrangeCouch4242" data-slug-hash="KKWvMyp" style="height: 265px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="Moral Violation">
+          <span>See the Pen <a href="https://codepen.io/OrangeCouch4242/pen/KKWvMyp">
+          Moral Violation</a> by Tiffany  (<a href="https://codepen.io/OrangeCouch4242">@OrangeCouch4242</a>)
+          on <a href="https://codepen.io">CodePen</a>.</span>
+        </p>
+        <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+        </div>
+        <div class="project_title">Survey Form
+          <p class="codepen" data-height="265" data-theme-id="dark" data-default-tab="html,result" data-user="OrangeCouch4242" data-slug-hash="zYZEaRX" style="height: 265px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="Survey Form">
+            <span>See the Pen <a href="https://codepen.io/OrangeCouch4242/pen/zYZEaRX">
+            Survey Form</a> by Tiffany  (<a href="https://codepen.io/OrangeCouch4242">@OrangeCouch4242</a>)
+            on <a href="https://codepen.io">CodePen</a>.</span>
+          </p>
+          <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+        </div>
+        <div class="project_title">Landing Page<p class="codepen" data-height="265" data-theme-id="dark" data-default-tab="html,result" data-user="OrangeCouch4242" data-slug-hash="bGqazwE" style="height: 265px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="Landing Page">
+          <span>See the Pen <a href="https://codepen.io/OrangeCouch4242/pen/bGqazwE">
+          Landing Page</a> by Tiffany  (<a href="https://codepen.io/OrangeCouch4242">@OrangeCouch4242</a>)
+          on <a href="https://codepen.io">CodePen</a></span>
+        </p>
+        <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+        </div>
+        <div class="project_title">Technical Page<p class="codepen" data-height="265" data-theme-id="dark" data-default-tab="html,result" data-user="OrangeCouch4242" data-slug-hash="dyvdrgG" style="height: 265px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="Technical Page">
+          <span>See the Pen <a href="https://codepen.io/OrangeCouch4242/pen/dyvdrgG">
+          Technical Page</a> by Tiffany  (<a href="https://codepen.io/OrangeCouch4242">@OrangeCouch4242</a>)
+          on <a href="https://codepen.io">CodePen</a>.</span>
+        </p>
+        <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+        </div>
+      </div>
+  </section>
+  <!--PROJECTS PAGE END -->
+
+  <!--CONTACT PAGE START -->
+    <section id="contact">
+      <h1 class="page_title">Recruit Me!</h1>
+        <h2>I take my coffee cold and dark...</h2>
+          <div class="flex_container_body">
+            <div id="quote">
+              <p>"Only those who will risk going too far can possibly find out how far one can go." 
+              <br>
+                ~ Thomas Stearns Eliot</p>
+            </div>
+            <div id="contact_me">
+              <div class="survey_title">Contact Me</div>
+              <div class="survey_answer">
+                <label for="field_title"></label>
+                <br>
+                <input type="text" 
+                  class="form-control"
+                  placeholder="Enter your Name">
+              </div>
+              <div class="survey_answer">
+                <label for="field_title"></label>
+                <br>
+                <input type="text" 
+                      class="form-control"
+                      placeholder="Your email">
+              </div>
+              <div class="survey_answer">
+                <label for="field_title"></label>
+                <br>
+                <input type="text" 
+                    class="form-control2"
+                    placeholder="Describe your project. I'd love to work with you">
+              </div>
+              <div class="submit">
+              <button type= "submit">Drop the Line</button>
+              </div>
+            </div>
+          </div>    
+
+        <div class="contact_links">
+        <i class="fa fab fa-linkedin">
+        </i>
+        <i class="fa fab fa-github">
+        </i> 
+        <i class="fa fas fa-envelope-open">
+        </i> 
+        <i class="fa fas fa-mobile">  
+        </i> 
+      </div>
+      
+    </section>
+
+  <!--CONTACT PAGE END -->
+
+  <!-- START FOOTER-->
+   <footer id="footer">
+    <span><i class="fa fa-copyright" aria-hidden="true"></i>
+    </span>
+   </footer>
+  <!-- END FOOTER -->
+</body>
 </html>
