addstyle.css, connect to index.html

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
       <p>Web Developer</p>
   <!-- PROFILE AND RESUME -->
         <div class= "profile">
-          <img src="https://scontent-lga3-1.xx.fbcdn.net/v/t1.6435-9/197923673_10222866372865957_1009757365118895372_n.jpg?_nc_cat=103&amp;ccb=1-3&amp;_nc_sid=730e14&amp;_nc_ohc=NU1l8FuATL8AX-xnShM&amp;_nc_ht=scontent-lga3-1.xx&amp;oh=171897becc6f11102eacf72ad99d9a2f&amp;oe=60E3298E
-          " alt="picture">
+          <img src="C:\Users\tamti\iCloudDrive\Desktop\portfolio_image new.jpeg"
+            alt="picture">
           <div class= "resume">
             <h3>Resume</h3>
             <ul>
@@ -63,13 +63,13 @@
   <section id="projects">
     <h1 class="page_title">Portfolio</h1>
       <div class="project-tile">
-        <div class="project_title">Tribute Page    <p class="codepen" data-height="265" data-theme-id="dark" data-default-tab="html,result" data-user="OrangeCouch4242" data-slug-hash="KKWvMyp" style="height: 265px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="Moral Violation">
+        <!-- <div class="project_title">Tribute Page    <p class="codepen" data-height="265" data-theme-id="dark" data-default-tab="html,result" data-user="OrangeCouch4242" data-slug-hash="KKWvMyp" style="height: 265px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="Moral Violation">
           <span>See the Pen <a href="https://codepen.io/OrangeCouch4242/pen/KKWvMyp">
           Moral Violation</a> by Tiffany  (<a href="https://codepen.io/OrangeCouch4242">@OrangeCouch4242</a>)
           on <a href="https://codepen.io">CodePen</a>.</span>
         </p>
         <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
-        </div>
+        </div> -->
         <div class="project_title">Survey Form
           <p class="codepen" data-height="265" data-theme-id="dark" data-default-tab="html,result" data-user="OrangeCouch4242" data-slug-hash="zYZEaRX" style="height: 265px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="Survey Form">
             <span>See the Pen <a href="https://codepen.io/OrangeCouch4242/pen/zYZEaRX">
