add script.js, connect to index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 
     <!-- LINK TO CSS -->
     <link rel="stylesheet" href="style.css" />
+    
+    <!--LINK TO JS -->
+    <script src="script.js"></script>
 
     <!-- LINK TO FONTS -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -63,13 +66,6 @@
   <section id="projects">
     <h1 class="page_title">Portfolio</h1>
       <div class="project-tile">
-        <!-- <div class="project_title">Tribute Page    <p class="codepen" data-height="265" data-theme-id="dark" data-default-tab="html,result" data-user="OrangeCouch4242" data-slug-hash="KKWvMyp" style="height: 265px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="Moral Violation">
-          <span>See the Pen <a href="https://codepen.io/OrangeCouch4242/pen/KKWvMyp">
-          Moral Violation</a> by Tiffany  (<a href="https://codepen.io/OrangeCouch4242">@OrangeCouch4242</a>)
-          on <a href="https://codepen.io">CodePen</a>.</span>
-        </p>
-        <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
-        </div> -->
         <div class="project_title">Survey Form
           <p class="codepen" data-height="265" data-theme-id="dark" data-default-tab="html,result" data-user="OrangeCouch4242" data-slug-hash="zYZEaRX" style="height: 265px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="Survey Form">
             <span>See the Pen <a href="https://codepen.io/OrangeCouch4242/pen/zYZEaRX">
